# lc3rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
examples/: 2048.sym  assemble.rs  gammut.sym  hello.asm  hello.sym  rogue.sym
examples/bad/: duplicate-symbols.asm  unexpected-token.asm  unexpected-token.sym
src/: asm.lalrpop  asm.rs  lc3.rs  lib.rs  main.rs  parser.lalrpop  sym.rs  vm.rs
src/parser/: lc3.pest
test/: gammut.asm
tests/: assemble.rs  read_write.rs
