[package]
name = "lc3"
version = "0.1.0"
edition = "2021"
authors = ["Cliff Snyder <cliff.snyder@gmail.com>"]
description = "a collection of tools for LC3 programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lc3"
# path = "src/lib.rs"

[[bin]]
name = "lc3as"
description = "LC3 assembler"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "wrap_help"] }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.0"
