[package]
name = "lc3"
version = "0.1.0"
edition = "2021"
authors = ["Cliff Snyder <cliff.snyder@gmail.com>"]
description = "a collection of tools for LC3 programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lc3"

[[bin]]
name = "lc3as"

[[bin]]
name = "lc3vm"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "wrap_help"] }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
rstest = "0.21.0"
termios = "0.3.3"

[build-dependencies]
lalrpop = "0.20.0"
