[package]
name = "lc3"
version = "0.1.0"
edition = "2021"
authors = ["Cliff Snyder <cliff.snyder@gmail.com>"]
description = "a collection of tools for LC3 programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lc3"

[[bin]]
name = "lc3as"

# [[bin]]
# name = "lc3vm"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
ctrlc = "3.5.1"
logos = "0.16.0"
rstest = "0.26.1"
termios = "0.3.3"
thiserror = "2.0.18"

[build-dependencies]
lalrpop = "0.22.2"
